// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`atoms/Spacer Default play-test 1`] = `
<br data-testid="Spacer"
    class="sc-hDcvty llUJuV"
>
`;

exports[`atoms/Spacer Eight play-test 1`] = `
<br data-testid="Spacer"
    class="sc-hDcvty cnEEcO"
>
`;
